# tutorial

./: .gitattributes  LICENSE  README.md  README_EN.md  pyproject.toml  requirements.txt
data/: comments.xlsx  comments_label.xlsx  data.json
src/: extract.py  label.py
